[gd_scene load_steps=4 format=3 uid="uid://b4m7rww171ste"]

[ext_resource type="Texture2D" uid="uid://1brrp2nktfwe" path="res://Media/Cards/normal/Untitled_Artwork-2.png" id="1_4cm61"]
[ext_resource type="Script" path="res://Sceens/Cards/two_clubs.gd" id="1_ukwch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7jb4"]
size = Vector2(76.9231, 78.8274)

[node name="TwoClubs" type="Node2D"]
script = ExtResource("1_ukwch")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_4cm61")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(12, -11.9999)
scale = Vector2(23.4, 36.84)
shape = SubResource("RectangleShape2D_w7jb4")

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
